--- a/testing.Rmd
+++ b/testing.Rmd
@@ -12,6 +12,7 @@ library(tidyverse)
 
 ```{r}
 ggplot(data = mpg, aes(x = class, y = cty)) +
-  geom_jitter()
+  geom_jitter(aes(color = class), size = 2) +
+  labs(x = "Car Class", y = "City mpg")
 ```
 
